Fixed an oopsie

--- a/logical-relation.tex
+++ b/logical-relation.tex
@@ -115,7 +115,7 @@
   \item This follows by definition.
   \item Since $e$ is strongly normalizing, all of its one-step $\beta$-reductions must be strongly normalizing.
     Hence, $e' \in \LRN{1}$.
-  \item Since any one-step reduction of $e$ results in a strongly normalizing expression, $e$ is strongly normalizing.
+  \item Since every one-step reduction of $e$ results in a strongly normalizing expression, $e$ is strongly normalizing.
   \end{enumerate}
 
   \textbf{Case ($\tau = \tau_{1} \to \tau_{2}$):}
